kubernetes/ingress-host.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
spec:
  selector:
    matchLabels:
      project: django-app
  template:
    metadata:
      labels:
        project: django-app
    spec:
      containers:
        - name: django-container
          image: letsrock2007/django-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort : 80
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    env: production
spec:
  selector:
    project: django-app
  ports:
    - name: django-listener
      port: 8888
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
